--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,800|Open+Sans:300,400,800i" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
